fix: eliminate subpixel responsive gap between 869px and 870px

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -143,7 +143,7 @@
     }
 }
 
-@media screen and (max-width: 869px) {
+@media screen and (width < 870px) {
     .nav-logo {
         width: 50px;
         height: auto;
